crates/taim-tui/src/widgets/snapshots/taim_tui__widgets__tests__snapshot_empty_board.snap
---
source: crates/taim-tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
╭Backlog (0)────────┬In Progress (0)────┬Under Review (0)───┬Done (0)──────────╮
│No tasks           │No tasks           │No tasks           │No tasks          │
│                   │                   │                   │                  │
│                   │                   │                   │                  │
│                   │                   │                   │                  │
│                   │                   │                   │                  │
│                   │                   │                   │                  │
│                   │                   │                   │                  │
│                   │                   │                   │                  │
│                   │                   │                   │                  │
│                   │                   │                   │                  │
│                   │                   │                   │                  │
│                   │                   │                   │                  │
│                   │                   │                   │                  │
│                   │                   │                   │                  │
│                   │                   │                   │                  │
│                   │                   │                   │                  │
│                   │                   │                   │                  │
│                   │                   │                   │                  │
╰───────────────────┴───────────────────┴───────────────────┴──────────────────╯
