crates/taim-tui/src/widgets/snapshots/taim_tui__widgets__tests__snapshot_help_overlay.snap
---
source: crates/taim-tui/src/widgets/tests.rs
assertion_line: 391
expression: buffer_to_string(&buf)
---



                      ╭ Help ───────────────────────────╮
                      │                                 │
                      │  Navigation                     │
                      │  ←          Move left           │
                      │  →          Move right          │
                      │  ↑          Select previous     │
                      │  ↓          Select next         │
                      │                                 │
                      │  Actions                        │
                      │  Enter      Open details        │
                      │  Esc        Close panel         │
                      │  Ctrl+C     Quit                │
                      │  ?          Toggle help         │
                      │                                 │
                      │  Press any key to close         │
                      │                                 │
                      ╰─────────────────────────────────╯
