crates/taim-tui/src/widgets/snapshots/taim_tui__widgets__tests__snapshot_lane_empty.snap
---
source: crates/taim-tui/src/widgets/tests.rs
assertion_line: 107
expression: buffer_to_string(&buf)
---
┌Backlog (0)────────────┐
│No tasks               │
│                       │
│                       │
│                       │
│                       │
│                       │
│                       │
│                       │
│                       │
│                       │
│                       │
│                       │
│                       │
└───────────────────────┘
