crates/taim-tui/src/widgets/snapshots/taim_tui__widgets__tests__snapshot_lane_with_tasks.snap
---
source: crates/taim-tui/src/widgets/tests.rs
assertion_line: 127
expression: buffer_to_string(&buf)
---
┌In Progress (2)────────┐
│┌─────────────────────┐│
││Active task          ││
││Currently being wo...││
│└─────────────────────┘│
│┌─────────────────────┐│
││Waiting task         ││
││In queue             ││
│└─────────────────────┘│
│                       │
│                       │
│                       │
│                       │
│                       │
└───────────────────────┘
