crates/taim-tui/src/widgets/snapshots/taim_tui__widgets__tests__snapshot_status_bar.snap
---
source: crates/taim-tui/src/widgets/tests.rs
expression: buffer_to_string(&buf)
---
┌──────────────────────────────────────────────────────────────────────────────┐
│q Quit  ←→↑↓ Navigate  Enter Select                                           │
└──────────────────────────────────────────────────────────────────────────────┘
