crates/taim-tui/src/widgets/snapshots/taim_tui__widgets__tests__snapshot_task_card_failed.snap
---
source: crates/taim-tui/src/widgets/tests.rs
assertion_line: 192
expression: buffer_to_string(&buf)
---
┌────────────────────┐
│Failed Task         │
│Error during exec...│
└────────────────────┘
