crates/taim-tui/src/widgets/snapshots/taim_tui__widgets__tests__snapshot_task_card_inflight.snap
---
source: crates/taim-tui/src/widgets/tests.rs
assertion_line: 153
expression: buffer_to_string(&buf)
---
┌────────────────────┐
│Active Task         │
│Work in progress    │
└────────────────────┘
