crates/taim-tui/src/widgets/snapshots/taim_tui__widgets__tests__snapshot_task_card_needs_attention.snap
---
source: crates/taim-tui/src/widgets/tests.rs
assertion_line: 166
expression: buffer_to_string(&buf)
---
┌────────────────────┐
│Blocked Task        │
│Needs input from PM │
└────────────────────┘
